--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,7 +30,8 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git commit -am "generated"
+          git add -A
+          git commit -m "generated"
           git push
 
       - name: configure aws credentials
@@ -42,3 +43,6 @@ jobs:
 
       - name: upload zip to s3
         run: aws s3 sync public s3://garage.gg --delete --acl public-read
+
+      - name: invalidate cloudfront
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRIBUTION_ID }} --paths '/*'
