--- a/.github/workflows/cloudfront.yml
+++ b/.github/workflows/cloudfront.yml
@@ -16,6 +16,14 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      - name: npm install
+        working-directory: assets
+        run: npm ci
+
       - name: hugo build
         uses: jakejarvis/hugo-build-action@master
         with:
