--- a/.github/workflows/admin-api.yml
+++ b/.github/workflows/admin-api.yml
@@ -5,9 +5,8 @@ on:
     branches:
       - master
     paths:
-      - '**'
-      - '!.github/workflows/**'
       - '.github/workflows/admin-api.yml'
+      - 'assets/go/**'
       - '!assets/go/lambda/**'
       - 'assets/go/lambda/admin-api/**'
 
