cleaned up gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 public/
-assets/go/lambda/admin-api/.env
-assets/node_modules
+.env
+node_modules/
 assets/go/lambda/admin-api/admin-api
+assets/go/lambda/api/api
